moved grid css to flex

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,31 +1,7 @@
 .list-container {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  display: flex;
   justify-items: center;
   justify-content: center;
   gap: 1rem;
-}
-
-@media (max-width: 1200px) {
-  .list-container {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-
-@media (max-width: 800px) {
-  .list-container {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-@media (max-width: 600px) {
-  .list-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 400px) {
-  .list-container {
-    grid-template-columns: repeat(1, 1fr);
-  }
+  flex-wrap: wrap;
 }
