--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,5 +1,7 @@
 form {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   align-items: center;
+  gap: 1rem;
+  margin-top: 1rem;
 }
