--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -2,6 +2,7 @@ form {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
+  justify-content: center;
   gap: 1rem;
   margin-top: 1rem;
 }
